--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="student_leave_note_label">请假事由</string>
     <string name="leave_start_date_label">开始日期</string>
     <string name="leave_end_date_label">结束日期</string>
+	<string name="add_leave_bt">确定</string>
 </resources>
