--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="leave_start_date_label">开始日期</string>
     <string name="leave_end_date_label">结束日期</string>
 	<string name="add_leave_bt">确定</string>
+    <string name="history_start_date">开始日期</string>
+    <string name="history_end_date">结束日期</string>
+    <string name="approve_state_label">审批状态</string>
 </resources>
